2019-11-01  Karl Berry  <karl@tug.org>

	* mkindex: "quote" arguments, doc tweaks.
	(Really testing update of arch-specific packages with versioned
	containers with meaningless changes.)

2019-03-21  Karl Berry  <karl@tug.org>

	* mkind.h (ARGUMENT_MAX): increase to 10240 from 1024,
	since can be used with glossaries, etc. Found by Nicola Talbot.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2014-11-13  Karl Berry  <karl@tug.org>

	* ind-src: new directory (starting from and replacing
	Master/texmf-dist/doc/support/makeindex/ind-src.zip) with udpated
	documentation, from Dan Luecking.
	* Makefile.am (EXTRA_DIST): add ind-src.
	* makeindex.1: document missing directives, noted by Dan.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* genind.c, scanid.c: Avoid undefined behaviour when char is
	signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_COND_WIN32.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* scanid.c: Replace bzero(s, l) => memset(s, 0, l).

2013-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid gcc warning on 64-bit systems.
	* mkind.[ch] (idx_gt): Change type 'size_t' back to 'int'.
	* sortid.c (sort_idx): Cast qqsort() arg2 idx_gt to 'size_t'.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.h: Drop duplicate '#include "c-auto.h"'.

2012-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.c: Avoid TL vs W32TeX diffs (from Akira).

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkind.c, scanid.c: Do not typecast the result of malloc().

2012-07-27  Peter Breitenlohner  <peb@mppmu.mpg.de>
