@@ -1,0 +1,26 @@
+\begin{theindex}
+
+  \item entryA, 1[[sfx 2p]], iii[[sfx 2p]], IX[[sfx 2p]]
+  \item entryA1, 1[[sfx 2p]], iii[[sfx 2p]], IX[[sfx 2p]]
+  \item entryB, 1[[sfx 3p]], iii[[sfx 3p]], IX[[sfx 3p]]
+  \item entryB1, 1[[sfx 3p]], iii[[sfx 3p]], IX[[sfx 3p]]
+  \item entryC, 1[[delim r]]4, \bold{iii[[delim r]]vi}, IX, \bold{X}, 
+		XI[[sfx 2p]]
+  \item entryC1, 1[[delim r]]4, \bold{iii[[delim r]]vi}, \bold{X}, 
+		IX[[delim r]]XII
+  \item entryD, c-1[[sfx 2p]], d-IX[[sfx 2p]], i-iii[[sfx 2p]]
+  \item entryD1, c-1[[sfx 2p]], d-IX[[sfx 2p]], i-iii[[sfx 2p]]
+  \item entryE, c-1[[sfx 3p]], d-IX[[sfx 3p]], i-iii[[sfx 3p]]
+  \item entryE1, c-1[[sfx 3p]], d-IX[[sfx 3p]], i-iii[[sfx 3p]]
+  \item entryF, C-I[[delim r]]C-IV, D-DI[[delim r]]D-DIV, 
+		V-LIII[[delim r]]V-LVI
+  \item entryF1, C-I[[delim r]]C-IV, \bold{D-DII}, D-DI[[delim r]]D-DIV, 
+		V-LIII[[delim r]]V-LVI
+  \item entryP, A-a-1-VII-iii[[sfx 3p]], A-a-1-VIII-iii, A-a-1-IX-iii, 
+		A-a-2-VII-iii, A-a-3-VII-iii
+  \item entryQ, 1-2-3-4-5-6-7-8-9-10[[sfx 2p]], 
+		1-2-3-4-5-6-7-8-9-14[[sfx 3p]], 
+		1-2-3-4-5-6-7-8-9-22[[delim r]]1-2-3-4-5-6-7-8-9-25, 
+		1-2-3-4-5-6-7-8-9-i[[delim r]]1-2-3-4-5-6-7-8-9-v
+
+\end{theindex}
